--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
@@ -49,25 +48,43 @@
       }
     </script>
     <style>
-      /* Custom Scrollbar */
-      ::-webkit-scrollbar {
-        width: 8px;
+      /* --- Custom Scrollbar Styling --- */
+
+      /* For Desktop: A beautiful custom scrollbar */
+      @media (min-width: 768px) {
+        ::-webkit-scrollbar {
+          width: 8px;
+        }
+        ::-webkit-scrollbar-track {
+          background: #F8F0E5;
+        }
+        .dark ::-webkit-scrollbar-track {
+          background: #3a2e2e;
+        }
+        ::-webkit-scrollbar-thumb {
+          background: linear-gradient(to bottom, #FFD1E3, #E6A4B4);
+          border-radius: 10px;
+        }
+        .dark ::-webkit-scrollbar-thumb {
+          background: linear-gradient(to bottom, #EADBC8, #F1C27B);
+        }
       }
-      ::-webkit-scrollbar-track {
-        background: #F8F0E5;
-      }
-      .dark ::-webkit-scrollbar-track {
-        background: #3a2e2e;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: linear-gradient(to bottom, #FFD1E3, #E6A4B4);
-        border-radius: 10px;
-      }
-      .dark ::-webkit-scrollbar-thumb {
-        background: linear-gradient(to bottom, #EADBC8, #F1C27B);
+      
+      /* For Mobile: Hide the scrollbar for a cleaner, app-like experience. */
+      /* The page remains scrollable by touch. */
+      @media (max-width: 767px) {
+        /* Hides scrollbar for WebKit browsers */
+        ::-webkit-scrollbar {
+          display: none;
+        }
+        /* Hides scrollbar for IE, Edge, and Firefox */
+        html {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+        }
       }
 
-      /* Starry Background */
+      /* --- Starry Background --- */
       .starry-bg {
         position: fixed;
         top: 0;
