--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/moeda.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trufarte 💖</title>
     <script src="https://cdn.tailwindcss.com"></script>
